# ChatCenterApi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_.txt  test_main.http
app/: dependencies.py  main.py
app/api/v1/auth/: dependencies.py  router.py  schemas.py  services.py  utils.py
app/api/v1/messages/: router.py  schemas.py  services.py
app/config/: intents.yaml  intents_en.yaml  intents_ru.yaml  intents_tg.yaml  intents_tj.yaml
app/core/: cache.py  config.py  logging.py  startup.py  weather.py
app/core/nlp/: contexts.py  dependencies.py  detector.py  factory.py  schemas.py  services.py  utils.py
app/core/nlp/handlers/: __init__.py  comany.py  company.py  social.py  support.py  weather.py
app/core/nlp/language/: config.py  detector.py  loader.py  manager.py
app/core/nlp/models/: __init__.py  english.py  multi_language.py  russian.py  tajiki.py
app/db/: mongodb.py  postgres.py  tortoise_init.py
app/middleware/: error_handling.py  logging.py
app/models/: mongo_models.py  postgres_models.py
app/tests/: test_notification_websocket.py  test_rate_limiting.py
app/utils/: cache.py  email.py  logger.py  websocket_manager.py
static/: styles.css
static/public/: about.txt
templates/: index.html
