[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "A FastAPI project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.27"
pydantic = "^1.8.2"
python-dotenv = "^0.19.2"

[tool.aerich]
tortoise_orm = "app.db.tortoise_init.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
